Changes for duel website.

--- a/_posts/2017-11-02-dani.markdown
+++ b/_posts/2017-11-02-dani.markdown
@@ -11,6 +11,7 @@ category: blog
 author: dani
 description: Dani's contributions to the project
 star: true
+project: 1
 ---
 
 ## Contributions Made
