--- a/_posts/2017-11-06-raghu.markdown
+++ b/_posts/2017-11-06-raghu.markdown
@@ -11,6 +11,7 @@ description: "Raghu talks about her role in the project"
 category: blog
 author: raghu
 star: true
+project: 1
 ---
 
 - Found and incorporate sounds for almost everything during the gameplay.
