New design for umbvrela

--- a/_posts/2017-11-02-dani.markdown
+++ b/_posts/2017-11-02-dani.markdown
@@ -1,12 +1,9 @@
 ---
-title: "Dani - My Role"
+title: "Dani Mataruga"
 layout: post
 date: 2017-11-01 22:44
 headerImage: false
-tag:
-- unreal
-- programming
-- virtual reality
+tag: code
 category: blog
 author: dani
 description: Dani's contributions to the project
