--- a/_posts/2017-12-06-ju.markdown
+++ b/_posts/2017-12-06-ju.markdown
@@ -11,12 +11,9 @@ star: true
 project: 2
 ---
 
-## UX
-- Initial Prototypes on paper, setting game goals.
+## joysticks
+- scripts
 
-## Unity 3d
-- Initial Networking Setup with Unity Network Manager
-- First person's perspective
-- Shooting bullets visuals, marking bullet collisions with zombies
-- Background and gameplay audio.
-- Game Canvas for Health, Bullets and Reset Time.
+## game functionalities
+- delay after died and reset
+- Model assets for the first person.
